--- a/shree-portfolio/package.json
+++ b/shree-portfolio/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@supabase/supabase-js": "^2.81.0",
     "ai": "^5.0.91",
     "class-variance-authority": "^0.7.1",
