--- a/shree-portfolio/package.json
+++ b/shree-portfolio/package.json
@@ -26,6 +26,7 @@
     "next": "16.0.1",
     "openai": "^6.8.1",
     "react": "19.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "19.2.0",
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1",
