--- a/shree-portfolio/package.json
+++ b/shree-portfolio/package.json
@@ -18,6 +18,8 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@supabase/supabase-js": "^2.81.0",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "ai": "^5.0.91",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -29,6 +31,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "19.2.0",
     "react-markdown": "^10.1.0",
+    "react-swipeable": "^7.0.2",
     "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.4.0",
     "zustand": "^5.0.8"
