--- a/shree-portfolio/package.json
+++ b/shree-portfolio/package.json
@@ -23,6 +23,7 @@
     "ai": "^5.0.91",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
     "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
     "lucide-react": "^0.553.0",
@@ -35,6 +36,7 @@
     "react-markdown": "^10.1.0",
     "react-swipeable": "^7.0.2",
     "remark-gfm": "^4.0.1",
+    "sharp": "^0.34.5",
     "tailwind-merge": "^3.4.0",
     "zustand": "^5.0.8"
   },
